2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl/VersionControlNodeExtension.cs:
	  Remove debug output.

2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.VersionControl.csproj:
	* MonoDevelop.VersionControl/ChangeSet.cs: New reusable widget
	  for showing change sets.

2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl/Repository.cs:
	* MonoDevelop.VersionControl.Views/DiffView.cs:
	* MonoDevelop.VersionControl/UnknownRepository.cs:
	* MonoDevelop.VersionControl.Views/ComparisonView.cs:
	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs:
	* MonoDevelop.VersionControl/VersionControlNodeExtension.cs:
	  Add basic support for git.

2010-07-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/BlameView.cs:
	* MonoDevelop.VersionControl.Views/ComparisonView.cs: Use
	  delegation methods.

2010-07-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/LogView.cs:
	* MonoDevelop.VersionControl.Views/BlameWidget.cs:
	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs: Worked
	  on version control views.

2010-07-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/BlameView.cs:
	* MonoDevelop.VersionControl.Views/BlameWidget.cs:
	* MonoDevelop.VersionControl.Views/PatchWidget.cs:
	* MonoDevelop.VersionControl.Views/ComparisonView.cs:
	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs: Track
	  API changes.

2010-07-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs: Worked
	  on adjustments. (text editors no longer share a common
	  adjustment - instead they communicate)

2010-07-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs: Fixed
	  the overview renderer click position.

2010-07-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/BlameWidget.cs: