@@ -1,5 +1,10 @@
 2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* MonoDevelop.VersionControl.Views/ChangeSetView.cs: Add
+	  missing file.
+
+2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* MonoDevelop.VersionControl/VersionControlNodeExtension.cs:
 	  Remove debug output.
 
